[fix] removed benchmarking footer and extra whitespace on bottom of home page [new] added dates subheading

--- a/css/home.less
+++ b/css/home.less
@@ -84,7 +84,7 @@ img.carousel{
   font-size:16px;
   line-height:20px;
   color:#ffffff;//#aeaeae;
-  margin-bottom:250px;
+  margin-bottom:200px;
 
 }
 
@@ -111,7 +111,7 @@ img.carousel{
   text-align: center;
   //margin-left:-20px;
   //margin-right:-20px;
-  //margin-bottom:-40px;
+  margin-bottom:-40px;
   //padding-left:20px;
   //padding-right:20px;
   padding-bottom:60px;
